# mpc-autofill

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  autofill.py  import_sources  requirements.txt  sync_dfcs  update_database
MPCAutofill/: app.py  pyproject.toml  requirements.txt
MPCAutofill/MPCAutofill/: .env.dist  settings.py
MPCAutofill/_cli/: dfcs.py  moxfield.py  patreon.py  sources.py  summarize.py  tags.py
MPCAutofill/cardpicker/: admin.py  constants.py  models.py  schema_types.py  urls.py  views.py
MPCAutofill/cardpicker/integrations/: patreon.py
MPCAutofill/cardpicker/integrations/game/: mtg.py
MPCAutofill/cardpicker/management/commands/: import_sources.py
MPCAutofill/cardpicker/migrations/: 0019_alter_source_drive_link_unique.py  0044_sitesecret_source_is_paused_source_is_public_and_more.py  0045_alter_source_ordinal.py
MPCAutofill/cardpicker/sources/: api.py  update_database.py
MPCAutofill/cardpicker/static/css/: custom.css
MPCAutofill/cardpicker/static/js/: card.js
MPCAutofill/cardpicker/templates/cardpicker/: base.html  credits.html  footer.html  guide.html  index.html  legal.html  new.html
MPCAutofill/cardpicker/tests/: test_integrations.py
MPCAutofill/config/: default.toml  drives.example.toml  user.example.toml
docker/: docker-compose.example.yml  docker_clean_all.sh
docker/django/: Dockerfile
docker/django/scripts/: entrypoint.sh  pre-run.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/scripts/: entrypoint.sh
frontend/: .env.dist
