[project]
name = "mpc-autofill"
version = "0.1.0"
description = "Django backend for the MPC Autofill image database tool."
readme = "readme.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "attrs~=23.1.0",
    "chardet~=5.1.0",
    "click==8.0.4",
    "defusedxml~=0.7.1",
    "django~=4.2.3",
    "django-bulk-sync~=3.3.0",
    "django-cors-headers~=3.14.0",
    "django-elasticsearch-dsl~=7.3.0",
    "django-environ~=0.10.0",
    "django-fernet-encrypted-fields~=0.4.0",
    "django-q2~=1.8.0",
    "django-stubs-ext~=4.2.2",
    "django-unfold~=0.65.0",
    "dynaconf[yaml]~=3.2.11",
    "elasticsearch-dsl>=7.0.0,<8.0.0",
    "enlighten~=1.11.2",
    "factory-boy~=3.2",
    "freezegun~=1.2",
    "google-api-python-client~=2.95.0",
    "google-auth-oauthlib~=1.0.0",
    "imagehash~=4.3.2",
    "levenshtein~=0.27.1",
    "markdown~=3.4.4",
    "oauth2client~=4.1.3",
    "pillow~=12.2.0",
    "psycopg2-binary~=2.9.6",
    "pycountry~=24.6.0",
    "pydantic~=2.10.0",
    "pyyaml~=6.0.2",
    "ratelimit~=2.2.1",
    "requests~=2.31.0",
    "requests-mock~=1.12.1",
    "sentry-sdk~=1.30.0",
    "syrupy~=5.1",
    "testcontainers[elasticsearch,postgres]~=4.10.0",
    "tomlkit~=0.14.0",
    "tqdm~=4.65.0",
    "whitenoise~=6.9.0",
]

[dependency-groups]
dev = [
    "commitizen~=4.15.0",
    "pre-commit~=4.2.0",
    "pytest~=9.0.3",
    "pytest-django~=4.11.1",
    "pytest-elasticsearch~=3.0",
    "python-dotenv~=1.0.0",
]

[project.scripts]
urza = "app:autofill_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manage", "mpcadmin", "cardpicker", "_cli", "accounts", "MPCAutofill"]

[tool.isort]
profile = "black"
known_cardpicker = "cardpicker"
known_src = "src"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "CARDPICKER", "SRC", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["build", "dist", "cards"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore-init-module-imports = true

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Ignore `E402` (import violations) and `F403` (error from `import *`) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403"]
